[package]
name = "mozdef_proxy"
version = "0.1.0"
authors = ["Emma Rose <emrose@mozilla.com>"]
edition = "2018"

[dependencies]
bodyparser = "^0.8"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.32"
env_logger = "^0.6"
futures = "^0.1"
iron = "^0.6"
log = "^0.4"
rusoto_core = "^0.36"
rusoto_credential = "^0.15"
rusoto_sqs = "^0.36"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
reqwest = "^0.9"
rusoto_mock = "^0.30"
