[package]
name = "mozdef-proxy"
version = "0.1.0"
authors = ["Emma Rose <emma.arcadia.rose@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
iron = "^0.6"
bodyparser = "^0.8"
rusoto_core = "^0.36"
rusoto_credential = "^0.15"
rusoto_sqs = "^0.36"
rusoto_mock = "^0.30"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
